--- a/espnow-modbus/main/CMakeLists.txt
+++ b/espnow-modbus/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "espnow_manage_data.c" "main.c" "debug.c"
+idf_component_register(SRCS "espnow_manage_data.c" "main.c" "debug.c" "uart_data.c"
                     INCLUDE_DIRS ".")
