pcb update, esp01 wifi

--- a/code/esp01-communication/platformio.ini
+++ b/code/esp01-communication/platformio.ini
@@ -13,4 +13,9 @@ platform = espressif8266
 board = esp01_1m
 framework = arduino
 upload_port = /dev/ttyUSB0
-lib_deps = plerup/EspSoftwareSerial@^6.16.1
+lib_deps = 
+	plerup/EspSoftwareSerial@^6.16.1
+	;khoih-prog/WiFiMulti_Generic@^1.1.1
+ 	;khoih-prog/Functional-Vlpp@>=1.0.2
+ 	;khoih-prog/WiFiNINA_Generic@>=1.8.14-3
+ 	;khoih-prog/ESP_AT_Lib@>=1.4.1
